src/snapshots/alma__infer__tests__infer-22.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (Fruita)\n\ntype Fruit = Banana\n\")"

---
Input:

module Test exposing (Fruita)

type Fruit = Banana


---
Output:

[1:22]

Couldn't find type `Fruita`

  1│  module Test exposing (Fruita)
   │                        ↑↑↑↑↑↑
  2│  
  3│  type Fruit = Banana
