src/snapshots/alma__infer__tests__infer-23.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a = Banana a\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit a = Banana a


---
Output:

module Test


