src/snapshots/alma__infer__tests__infer-24.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a b = Banana a\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit a b = Banana a


---
Output:

module Test


