src/snapshots/alma__infer__tests__infer-25.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Fruit = Banana\n\nmain = Banana\n\")"

---
Input:

module Test exposing (main)

type Fruit = Banana

main = Banana


---
Output:

module Test

main : Fruit
