src/snapshots/alma__infer__tests__infer-26.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Banana = Banana\n\ntype Fruit a = Fruit a\n\nmain = Fruit\n\")"

---
Input:

module Test exposing (main)

type Banana = Banana

type Fruit a = Fruit a

main = Fruit


---
Output:

module Test

main : a -> Fruit a
