src/snapshots/alma__infer__tests__infer-29.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\nimport Test.Fruits exposing (Fruit(Banana))\n\nmain = Banana\n\nmodule Test.Fruits exposing (Fruit(Banana))\n    type Fruit = Banana\n\")"

---
Input:

module Test exposing (main)

import Test.Fruits exposing (Fruit(Banana))

main = Banana

module Test.Fruits exposing (Fruit(Banana))
    type Fruit = Banana


---
Output:

module Test

main : ∀ ∅ . Fruit


module Test.Fruits

Banana : ∀ ∅ . Fruit


