src/snapshots/alma__infer__tests__infer-30.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\nimport Test.Fruits exposing (Banana)\n\nmain = Banana\n\nmodule Test.Fruits exposing (Fruit(Banana))\n    type Fruit = Banana\n\")"

---
Input:

module Test exposing (main)

import Test.Fruits exposing (Banana)

main = Banana

module Test.Fruits exposing (Fruit(Banana))
    type Fruit = Banana


---
Output:

[3:29]

Couldn't find type `Banana`

  1│  module Test exposing (main)
  2│  
  3│  import Test.Fruits exposing (Banana)
   │                               ↑↑↑↑↑↑
  4│  
  5│  main = Banana

----------------------------------------

[5:7]

Undefined identifier `Banana`

  3│  import Test.Fruits exposing (Banana)
  4│  
  5│  main = Banana
   │         ↑↑↑↑↑↑
  6│  
  7│  module Test.Fruits exposing (Fruit(Banana))
